2014-07-08  Jon Honeycutt  <jhoneycutt@apple.com>

        RemoteInspector::shared() should not call WTF::initializeMainThread()
        <https://bugs.webkit.org/show_bug.cgi?id=134747>
        <rdar://problem/17161482>

        Reviewed by Joseph Pecoraro.

        * inspector/remote/RemoteInspector.mm:
        (Inspector::RemoteInspector::shared):
        Don't call WTF::initializeMainThread(). WTF threading is initialized by
        JSC::initializeThreading().

2014-07-08  Andreas Kling  <akling@apple.com>

        VM::lastCachedString should be a Strong, not a Weak.
        <https://webkit.org/b/134746>

        Using Weak<JSString> for this regressed some of our bindings perf tests
        due to Weak having to allocate a new WeakImpl every time the last cached
        string changed. Make it a Strong instead should make that problem go away.

        Reviewed by Geoffrey Garen.

        * runtime/JSString.cpp:
        (JSC::jsStringWithCacheSlowCase):
        * runtime/VM.h:

2014-07-07  Benjamin Poulain  <bpoulain@apple.com>

        Fix the build after r170876

        * assembler/LinkBuffer.cpp:
        (JSC::LinkBuffer::linkCode):

2014-07-07  Benjamin Poulain  <benjamin@webkit.org>

        LinkBuffer should not keep a reference to the MacroAssembler
        https://bugs.webkit.org/show_bug.cgi?id=134668

        Reviewed by Geoffrey Garen.

        In FTL, the LinkBuffer can outlive the MacroAssembler that was used for code generation.
        When that happens, the pointer m_assembler points to released memory. That was not causing
        issues because the attribute is not used after linking, but that was not particularily
        future proof.

        This patch refactors LinkBuffer to avoid any lifetime risk. The MacroAssembler is now passed
        as a reference, it is used for linking but no reference is ever stored with the LinkBuffer.

        While fixing the call sites to use a reference, I also discovered LinkBuffer.h was included